about us paragraph

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
 
     <div class="row">
         <div class="box content-box">
-            <h1>We are AutoWizard Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, omnis eos! Enim, non harum! Veniam dicta quam, aut, cupiditate aliquid necessitatibus adipisci quas atque doloremque, dolorum placeat reprehenderit quisquam unde impedit voluptas dignissimos nostrum quos maiores consequuntur. Harum nulla in praesentium, et explicabo tenetur vel distinctio fugit quam placeat nihil.</h1>
+            <h1>Here at AutoWizard we strive to ensure our customers get quality cars for magical prices. Before a car is even listed on our site we go through and verify that it’s cleaned properly, has its essential fluids topped off, and that all of its components are properly lubricated and functioning. After our cars are in top condition for our customers we set the price of all of our vehicles in accordance to their recommended Kelly Blue Book value ensuring our customers get a fair price for our products. Finally to ensure that our customers have a wizardly experience we have our sales representatives and contact forms so we can answer any questions that may arise during their search.</h1>
         </div>
     </div>
 </section>
