reviews: grammar and spelling fix

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             <div class="swiper-slide box">
                 <img src="image/profiles/pic-1.png" alt="">
                 <div class="content">
-                    <p>"Thanks to AutoWizard's great website I was able to easily find a perfect car for me. In additon to how steamlined the webiste is they also have information for each car that helped me find the car I wanted."</p>
+                    <p>"Thanks to AutoWizard's great website I was able to easily find a perfect car for me. In addition to how streamlined the website is, they also have information for each car that helped me find the car I wanted."</p>
                     <h3>Alexander Hamilton</h3>
                     <div class="stars">
                         <i class="fas fa-star"></i>
@@ -244,7 +244,8 @@
             <div class="swiper-slide box">
                 <img src="image/profiles/pic-2.png" alt="">
                 <div class="content">
-                    <p>"The sales representatives knew what they were doing! I found a perfect car within seconds of contacting them. Not to mention all of thier cars are in prestine condition for being used."</p>
+                    <p>"The sales representatives knew what they were doing! I found a perfect car within seconds of contacting them. Not to mention all of their cars are in pristine condition for being used."
+                    </p>
                     <h3>Ada Lovelace</h3>
                     <div class="stars">
                         <i class="fas fa-star"></i>
@@ -259,7 +260,7 @@
             <div class="swiper-slide box">
                 <img src="image/profiles/pic-3.png" alt="">
                 <div class="content">
-                    <p>"This delaership has provided me my dream car not only at a great price but also in a practically brand new condition."</p>
+                    <p>"This dealership has provided me with my dream car not only at a great price but also in practically brand new condition."</p>
                     <h3>Alan Turing</h3>
                     <div class="stars">
                         <i class="fas fa-star"></i>
@@ -274,7 +275,7 @@
             <div class="swiper-slide box">
                 <img src="image/profiles/pic-4.png" alt="">
                 <div class="content">
-                    <p>"Auto Wizard has a wide varity of cars for sale. I even found the firetruck ive always wanted for a convientient price!"</p>
+                    <p>"AutoWizard has a wide variety of cars for sale. I even found the firetruck I've always wanted for a convenient price!"</p>
                     <h3>Grace Hopper</h3>
                     <div class="stars">
                         <i class="fas fa-star"></i>
@@ -289,7 +290,7 @@
             <div class="swiper-slide box">
                 <img src="image/profiles/pic-5.png" alt="">
                 <div class="content">
-                    <p>“This dealership helped me pick the car I want! Very nice people and thier website is easy to use!”</p>
+                    <p>“This dealership helped me pick the car I want! They also have helpful representatives in addition to their easy to navigate website.”</p>
                     <h3>Josh Adams</h3>
                     <div class="stars">
                         <i class="fas fa-star"></i>
@@ -304,7 +305,8 @@
             <div class="swiper-slide box">
                 <img src="image/profiles/pic-6.png" alt="">
                 <div class="content">
-                    <p>"Thanks to AutoWizard's newsletter I'm able to be notified of new relases that I may be intrested in for my company. Not to mention the contact form they have lets me quickly contact sales representatives when I need them."</p>
+                    <p>"Thanks to AutoWizard's newsletter I'm able to be notified of new releases that I may be interested in for my company. Not to mention the contact form which lets me quickly contact sales representatives when I need them."
+                    </p>
                     <h3>Hannah Laou</h3>
                     <div class="stars">
                         <i class="fas fa-star"></i>
