changed shreyas photo

--- a/salesRepresentatives.html
+++ b/salesRepresentatives.html
@@ -88,7 +88,7 @@
     
                 <div class="swiper-slide box">
                     <span> <b>Shreyas Narayanan</b></span>
-                    <img src="image/creators/ShreyasPic.jpeg" alt="">
+                    <img src="image/creators/ShreyasPic.png" alt="">
                     <div class="content">
                         <p class="firstElement"><b>Role:</b> Programmer and Designer</p>
                         <p><b>Team:</b> Farmington 435-S-01251</p>
