--- a/z.html
+++ b/z.html
@@ -26,7 +26,7 @@
 
     <h1 class="name" id="sliderName"> 2022 Mercedes Benz A-Class</h1>
 
-    <div class="img">
+    <div>
       <img class="slider-img" id="slider-img" src="/image/cars/10.png" style="height: 50%; width: 50%;" alt="img">
     </div>
 
@@ -39,7 +39,7 @@
 
 </section>
 
-<script type="module" src="/js/z.js"></script>
+<script type="module" src="/js/slider.js"></script>
 
 </body>
 </html>
