inital values fixed

--- a/z.html
+++ b/z.html
@@ -25,15 +25,15 @@
 
   <div class="slide" id="slide">
 
-    <h1 class="name" id="sliderName"> 2022 Mercedes Benz A-Class</h1>
+    <h1 class="name" id="sliderName"> Porsche Boxster S</h1>
 
     <div>
       <img class="slider-img" id="slider-img" src="/image/cars/10.png" style="height: 50%; width: 50%;" alt="img">
     </div>
 
     <div class="description">
-      <h2 class="slider-price" id="slider-price"> $22,000</h2> 
-      <h3 class="slider-paragraph" id="slider-paragraph"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop</h3>
+      <h2 class="slider-price" id="slider-price"> $43,590</h2> 
+      <h3 class="slider-paragraph" id="slider-paragraph"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt vel voluptate neque culpa nostrum recusandae cupiditate, error eius dolores nulla.</h3>
     </div>
 
   </div>
