slider arrows fixed

--- a/z.html
+++ b/z.html
@@ -19,8 +19,8 @@
 <section class="slider">
 
   <div class="arrows">
-    <button class="slider-button prev" id="sliderPrev"> &#8592;</button>
-    <button class="slider-button next" id="sliderNext"> &#8594;</button>
+    <button class="slider-button prev" id="sliderPrev"><img src="/image/navigation/leftarrow.png" alt="leftarrow"></button>
+    <button class="slider-button next" id="sliderNext"><img src="/image/navigation/rightarrow.png" alt="rightarrow"></button>
   </div>
 
   <div class="slide" id="slide">
