--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <nav class="navbar">
         <a href="#home">home</a>
-        <a href="#vehicles">popular</a>
+        <a href="#display">popular</a>
         <a href="#reviews">reviews</a>
         <a href="#contact">contact</a>
         <a href='explore.html'>explore</a>
@@ -89,7 +89,32 @@
 
 </section>
 
-<!-- Popular Cars -->
+<!-- Display Slider -->
+<section class="slider" id="display">
+
+    <div class="arrows">
+      <button class="slider-button prev" id="sliderPrev"><img src="/image/navigation/leftarrow.png" alt="leftarrow"></button>
+      <button class="slider-button next" id="sliderNext"><img src="/image/navigation/rightarrow.png" alt="rightarrow"></button>
+    </div>
+  
+    <div class="slide" id="slide">
+  
+      <h1 class="name" id="sliderName"> Porsche Boxster S</h1>
+  
+      <div>
+        <img class="slider-img" id="slider-img" src="/image/cars/10.png" style="height: 50%; width: 50%;" alt="img">
+      </div>
+  
+      <div class="description">
+        <h2 class="slider-price" id="slider-price"> $43,590</h2> 
+        <h3 class="slider-paragraph" id="slider-paragraph"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt vel voluptate neque culpa nostrum recusandae cupiditate, error eius dolores nulla.</h3>
+      </div>
+  
+    </div>
+  
+  </section>
+
+<!-- Popular Cars
 <section class="vehicles" id="vehicles">
 
     <h1 class="heading"> popular vehicles </h1>
@@ -174,7 +199,7 @@
 
     </div>
 
-</section>
+</section> -->
 
 <!-- Loan Caluclator -->
 <section class="loan" id="loan">
@@ -405,6 +430,7 @@
 <script src="js/swiper-bundle.min.js"></script>
 <script src="js/backToTop.js"></script>
 <script src="js/script.js"></script>
+<script type="module" src="/js/slider.js"></script>
 
 </body>
 
