--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
       document.getElementById("contactsb").style.width = "0";
       
     }
-    </script>
-
+</script>
 
 <!-- Subsrcibe To Newsletter -->
 <section class="newsletter">
@@ -129,8 +128,8 @@
   
   </section>
 
-<!-- Popular Cars
-<section class="vehicles" id="vehicles">
+<!-- Popular Cars -->
+<!-- <section class="vehicles" id="vehicles">
 
     <h1 class="heading"> popular vehicles </h1>
 
@@ -365,8 +364,6 @@
     </div>
 
 </section>
-
-
 
 <!-- Contact Form & Map -->
 <section class="contact" id="contact">
