--- a/index.html
+++ b/index.html
@@ -101,33 +101,8 @@
 
 </section>
 
-<!-- Display Slider -->
-<section class="slider" id="display">
-
-    <div class="arrows">
-      <button class="slider-button prev" id="sliderPrev"><img src="/image/navigation/leftarrow.png" alt="leftarrow"></button>
-      <button class="slider-button next" id="sliderNext"><img src="/image/navigation/rightarrow.png" alt="rightarrow"></button>
-    </div>
-  
-    <div class="slide" id="slide">
-  
-      <h1 class="name" id="sliderName"> Porsche Boxster S</h1>
-  
-      <div>
-        <img class="slider-img" id="slider-img" src="/image/cars/10.png" style="height: 50%; width: 50%;" alt="img">
-      </div>
-  
-      <div class="description">
-        <h2 class="slider-price" id="slider-price"> $43,590</h2> 
-        <h3 class="slider-paragraph" id="slider-paragraph"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt vel voluptate neque culpa nostrum recusandae cupiditate, error eius dolores nulla.</h3>
-      </div>
-  
-    </div>
-  
-  </section>
-
 <!-- Popular Cars -->
-<!-- <section class="vehicles" id="vehicles">
+<section class="vehicles" id="vehicles">
 
     <h1 class="heading"> popular vehicles </h1>
 
@@ -211,13 +186,12 @@
 
     </div>
 
-</section> -->
+</section>
 
 <!-- Loan Caluclator -->
-<section class="loan" id="loan">
+<!-- <section class="loan" id="loan">
     <h1 class="heading">Loan Calculator</h1>
     <div class="row">
-        <!-- input -->
         <form action="">
             <h3 class="formHeader">Input here</h3>
 
@@ -236,7 +210,6 @@
             </div>
         </form>
 
-        <!-- output -->
         <form action="">
             <h3 class="formHeader">Output</h3>
 
@@ -252,7 +225,7 @@
             <input id="totalCost" type="text" placeholder="Total Cost" class="box">
         </form>
     </div>
-</section>
+</section> -->
 
 <!-- Reviews -->
 <section class="reviews" id="reviews">
@@ -364,7 +337,7 @@
 </section>
 
 <!-- Contact Form & Map -->
-<section class="contact" id="contact">
+<!-- <section class="contact" id="contact">
 
     <h1 class="heading">contact us</h1>
 
@@ -388,7 +361,7 @@
 
     </div>
 
-</section>
+</section> -->
 
 <!-- Footer -->
 <section class="footer" id="footer">
