--- a/carInfo.html
+++ b/carInfo.html
@@ -65,7 +65,38 @@
 
 </div>
 
-<section class="carInfo" id="carInfo"></section>
+<section class="carInfo" id="carInfo">
+    <div class="content">
+
+        <h1 class="carTitle" id="carTitle"> White Ford F-150 XL </h1>
+
+        <div class="row">
+            
+            <div class="column">
+                <img src="/image/cars/1.png" alt="carImg">
+            </div>
+
+            <div class="column">
+                <div class="box">
+                    <h1>Price:</h1>
+                    <h1 id="carPrice">$30000</h1>
+
+                    <div class="monthly">
+                        <h1>lorem100</h1>
+                        <h1>lorem100</h1>
+                        <h1>lorem100</h1>
+                        <h1>lorem100</h1>
+                        <h1>lorem100</h1>
+                        <h1>lorem100</h1>
+                        <h1>lorem100</h1>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
 
 <!-- Footer -->
 <section class="footer" id="footer">
