--- a/explore.html
+++ b/explore.html
@@ -445,12 +445,9 @@
 
         <div class="box">
             <h3>quick links</h3>
-            <a href="index.html#home"> <i class="fas fa-arrow-right"></i> home </a>
-           <a href="index.html#vehicles"> <i class="fas fa-arrow-right"></i> popular </a>
-           <a href="index.html#reviews"> <i class="fas fa-arrow-right"></i> reviews </a>
-           <a href="index.html#contact"> <i class="fas fa-arrow-right"></i> contact </a>
+            <a href="#home"> <i class="fas fa-arrow-right"></i> home </a>
+           <a href="#contact"> <i class="fas fa-arrow-right"></i> contact us</a>
            <a href="explore.html"> <i class="fas fa-arrow-right"></i> explore </a>
-           <a href="index.html#aboutUs"> <i class="fas fa-arrow-right"></i> About Us </a>
            <a href="salesRepresentatives.html"> <i class="fas fa-arrow-right"></i> Representatives </a>
        </div>
  
