--- a/ContactUs.html
+++ b/ContactUs.html
@@ -42,6 +42,39 @@
 
 </section> 
 
+<!-- Footer -->
+<section class="footer" id="footer">
+
+    <div class="box-container">
+
+        <div class="box">
+            <h3>quick links</h3>
+            <a href="#home"> <i class="fas fa-arrow-right"></i> home </a>
+           <a href="#contact"> <i class="fas fa-arrow-right"></i> contact us</a>
+           <a href="explore.html"> <i class="fas fa-arrow-right"></i> explore </a>
+           <a href="salesRepresentatives.html"> <i class="fas fa-arrow-right"></i> Representatives </a>
+       </div>
+ 
+       <div class="box">
+           <h3>contact us!</h3>
+           <a href="#"> <i class="fas fa-phone"></i> +248-489-3455</a>
+           <a href="mailto:FarmingtonHSBPA@gmail.com"> <i class="fas fa-envelope"></i> FarmingtonHSBPA@gmail.com  </a>
+           <a href="https://maps.google.com/maps?q=farminton+high+school,Farmington"> <i class="fas fa-map-marker-alt"></i> 32000 Shiawassee St, Farmington, MI 48336 </a>
+       </div>
+ 
+       <div class="box">
+           <h3>Socials</h3>
+           <a href="https://www.facebook.com/michiganbpa/"> <i class="fab fa-facebook-f"></i> facebook </a>
+           <a href="https://twitter.com/MichiganBPA"> <i class="fab fa-twitter"></i> twitter </a>
+           <a href="https://www.instagram.com/farmington_bpa/"> <i class="fab fa-instagram"></i> instagram </a>
+
+        </div>
+
+    </div>
+
+    <div class="theme">Theme:  Develop a website for a used car lot</div>
+
+</section>
 
 </body>
 
