link back from contact form

--- a/ContactUs.html
+++ b/ContactUs.html
@@ -50,7 +50,7 @@
 
             <div class="box">
                 <h3>quick links</h3>
-                <a href="#home"> <i class="fas fa-arrow-right"></i> home </a>
+                <a href="index.html#home"> <i class="fas fa-arrow-right"></i> home </a>
                 <a href="#contact"> <i class="fas fa-arrow-right"></i> contact us</a>
                 <a href="explore.html"> <i class="fas fa-arrow-right"></i> explore </a>
                 <a href="salesRepresentatives.html"> <i class="fas fa-arrow-right"></i> Representatives </a>
