--- a/explore.html
+++ b/explore.html
@@ -241,10 +241,10 @@
             <h2>Filters</h2>
         </div>
 
-        <nav>
+        <nav class="slideOne">
 
-            <label for="touch"><span>Color</span></label>
-            <input type="checkbox" id="touch">
+            <label for="c"><span>Color</span></label>
+            <input type="checkbox" id="c">
 
             <ul class="slide color">
                 <li><a href="#">White</a></li>
@@ -260,8 +260,8 @@
 
         <nav>
 
-            <label for="touch"><span>Type</span></label>
-            <input type="checkbox" id="touch">
+            <label for="t"><span>Type</span></label>
+            <input type="checkbox" id="t">
 
             <ul class="slide type">
                 <li><a href="#">Pickup</a></li>
@@ -275,8 +275,8 @@
 
         <nav>
 
-            <label for="touch"><span>Transmisson</span></label>
-            <input type="checkbox" id="touch">
+            <label for="tr"><span>Transmisson</span></label>
+            <input type="checkbox" id="tr">
 
             <ul class="slide type">
                 <li><a href="#">Automatic</a></li>
@@ -288,8 +288,8 @@
 
         <nav>
 
-            <label for="touch"><span>Drivetrain</span></label>
-            <input type="checkbox" id="touch">
+            <label for="d"><span>Drivetrain</span></label>
+            <input type="checkbox" id="d">
 
             <ul class="slide type">
                 <li><a href="#">RWD</a></li>
@@ -302,8 +302,8 @@
 
         <nav>
 
-            <label for="touch"><span>Fuel Type</span></label>
-            <input type="checkbox" id="touch">
+            <label for="f"><span>Fuel Type</span></label>
+            <input type="checkbox" id="f">
 
             <ul class="slide type">
                 <li><a href="#">Electric</a></li>
