clear button centered

--- a/explore.html
+++ b/explore.html
@@ -122,7 +122,7 @@
     </div>
 
     <!-- Filter selector -->
-    <section class="selection" id="selection" style="margin-top: 100px;">
+    <!-- <section class="selection" id="selection" style="margin-top: 100px;">
         <div class="row">
             <div id="filters">
                 <h3>Color:</h3>
@@ -231,7 +231,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <button class="wwdsa btn" onclick="openSelection()">w</button>
 
@@ -352,7 +352,6 @@
 
         function setFuel(input) {
             selections[4] = fuels[input];
-            alert(selections);
         }
 
         function clearSelection() {
