--- a/salesRepresentatives.html
+++ b/salesRepresentatives.html
@@ -167,6 +167,19 @@
                     </div>
                 </div>
 
+                <div class="swiper-slide box">
+                    <span> <b>Samuel Ball Jr.</b></span>
+                    <img src="image/creators/SamPic.jpg" alt="">
+                    <div class="content">
+                        <p class="firstElement"><b>Role:</b> Database Manager</p>
+                        <p><b>Team:</b> Farmington 435-S-01251</p>
+                        <p><b>School:</b> Farmington High School</p>
+                        <p><b>City:</b> Farmington </p>
+                        <p><b>State:</b> Michigan</p>
+                        <p><b>Class:</b> Sophomore</p>
+                    </div>
+                </div>
+
 
             </div>
 
